--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 }
 
-group 'apkcleaner'
-version '1.0'
+group 'apkcloner'
+version '0.1'
 
 sourceCompatibility = 1.8
 
