--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 }
 
+apply plugin:'application'
+mainClassName = "Main"
+
 group 'apkcloner'
 version '0.1'
 
@@ -16,7 +19,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 compileKotlin {
@@ -30,7 +33,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'Main'
     }
-    // Add this
+
     from {
         configurations.compile.collect {
             it.isDirectory() ? it : zipTree(it)
