--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+}
+
+javafx {
+    version = "14"
+    modules = [ 'javafx.controls' ]
 }
 
 apply plugin:'application'
